--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "6c4befdf-aaaf-4557-9972-b22d8efdbb4f"
 authors = ["Émile Lemoine"]
 version = "0.1.0"
 
+[deps]
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1"
 
